--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
     ></script>
-    <script defer src="js.js"></script>
+    <!-- <script defer src="js.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -26,16 +26,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="preloader">
+    <!-- <div class="preloader">
       <div class="text" style="color: white">Jordi Franssen</div>
       <div class="title" style="color: white">Welcome</div>
       <div class="bar">
         <div id="fill"></div>
       </div>
-    </div>
+    </div> -->
     <div id="root"></div>
   </body>
-  <script>
+  <!-- <script>
     var progress = 0;
     document.onreadystatechange = function () {
       if (document.readyState == "interactive") {
@@ -63,5 +63,5 @@
         progress = progress + percentage;
       }
     }
-  </script>
+  </script> -->
 </html>
